--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "next": "^14.2.13",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
